--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
             </li>
         </ul>
         <div class="social-links">
-            <a href="https://github.com/laurourbano">
+            <a href="https://github.com/laurourbano" target="_blank">
                 <ion-icon name="logo-github"></ion-icon>
             </a>
-            <a href="https://www.instagram.com/lauro.urbano">
+            <a href="https://www.instagram.com/lauro.urbano" target="_blank">
                 <ion-icon name="logo-instagram"></ion-icon>
             </a>
-            <a href="https://www.linkedin.com/in/laurourbano">
+            <a href="https://www.linkedin.com/in/laurourbano" target="_blank">
                 <ion-icon name="logo-linkedin"></ion-icon>
             </a>
-            <a href="https://www.youtube.com/@laurootaviourbano">
+            <a href="https://www.youtube.com/@laurootaviourbano" target="_blank">
                 <ion-icon name="logo-youtube"></ion-icon>
             </a>
         </div>
